--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello Urbis et Orbis
+Dear visitor,
+the ElooooIT team is currently working on a new Webpage.
+We thank you for your patience and understanding.
+
+At this moment you can find more information about ElooooIT, as well contact us
+via our LinkedIn profile on:
+https://www.linkedin.com/company/eloooo-it
+
+Thank you and have a nice day!
+Your ElooooIT team
