--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-Dear visitor,
-the ElooooIT team is currently working on a new Webpage.
-We thank you for your patience and understanding.
-
-At this moment you can find more information about ElooooIT, as well contact us
-via our LinkedIn profile on:
-https://www.linkedin.com/company/eloooo-it
-
-Thank you and have a nice day!
-Your ElooooIT team
+<p>Dear visitor,</br>
+the ElooooIT team is currently working on a new Webpage.</br>
+We thank you for your patience and understanding.</br>
+</br>
+At this moment you can find more information about ElooooIT, as well contact us</br>
+via our LinkedIn profile on:</br>
+https://www.linkedin.com/company/eloooo-it</br>
+</br>
+Thank you and have a nice day!</br>
+Your ElooooIT team</p>
