--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ We thank you for your patience and understanding.</br>
 </br>
 At this moment you can find more information about ElooooIT, as well contact us</br>
 via our LinkedIn profile on:</br>
-https://www.linkedin.com/company/eloooo-it</br>
+<a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
 </br>
 Thank you and have a nice day!</br>
 Your ElooooIT team</p>
