--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         seconds = seconds - 1;
         if (seconds < 0) {
             // Chnage your redirection link here
-            window.location = "https://duckdev.com";
+            window.location = "https://www.linkedin.com/company/eloooo-it";
         } else {
             // Update remaining seconds
             document.getElementById("countdown").innerHTML = seconds;
