--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<head>
-<script type="text/javascript">
+<head></head>
+
+<body>
+    <h2>Dear visitor,</br>
+the ElooooIT team is currently working on a new Webpage.</br>
+We thank you for your patience and understanding.</br>
+    </br>
+At this moment you can find more information about ElooooIT, as well contact us</br>
+via our LinkedIn profile on:</br>
+        <a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
+    </br>
+Thank you and have a nice day!</br>
+Your ElooooIT team</h2>
+
+    <h3>Automatically redirecting to LinkedIn in <span id="countdown">10</span> seconds</h3>
+    <script type="text/javascript">
     
     // Total seconds to wait
     var seconds = 10;
@@ -20,19 +34,5 @@
     // Run countdown function
     countdown();
     
-</script>
-</head>
-
-<body><h2>Dear visitor,</br>
-the ElooooIT team is currently working on a new Webpage.</br>
-We thank you for your patience and understanding.</br>
-</br>
-At this moment you can find more information about ElooooIT, as well contact us</br>
-via our LinkedIn profile on:</br>
-<a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
-</br>
-Thank you and have a nice day!</br>
-Your ElooooIT team</h2>
-
-<h3>Automatically redirecting to LinkedIn in <span id="countdown">10</span> seconds</h3>
+    </script>    
 </body>
