--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head></head>
 
 <body>
@@ -13,6 +14,7 @@ Thank you and have a nice day!</br>
 Your ElooooIT team</h2>
 
     <h3>Automatically redirecting to LinkedIn in <span id="countdown">10</span> seconds</h3>
+</body>
     <script type="text/javascript">
     
     // Total seconds to wait
@@ -35,4 +37,4 @@ Your ElooooIT team</h2>
     countdown();
     
     </script>    
-</body>
+</html>
