--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+
 <html>
 <head></head>
 
 <body>
+    <h1><img src="Logo_v3_squared_500px.png" alt="Logo ElooooIT" style="width:120px;height:120px;"></h1>
     <h2>Dear visitor,</br>
 the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
@@ -11,14 +13,22 @@ via our LinkedIn profile on:</br>
         <a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
     </br>
 Thank you and have a nice day!</br>
-Your ElooooIT team</h2>
-
-    <h3>Automatically redirecting to LinkedIn in <span id="countdown">10</span> seconds</h3>
+Yours, Eloi and the ElooooIT team</h2>
+</br>
+</br>
+    <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira                                       Steuernr.   215/5013/5477</br>
+        Schwalbengasse 46, Innenstadt Köln, 50667                                           USt.ID Nr.    DE451906671</br>
+        Tel. +49 221 70214655  Fax. +49 221 70241341
+    </h3>
+</br>
+</br>
+</br>
+    <h3>Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
 </body>
     <script type="text/javascript">
     
     // Total seconds to wait
-    var seconds = 10;
+    var seconds = 20;
     
     function countdown() {
         seconds = seconds - 1;
