--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-    <h1><img src="Logo_v3_squared_500px.png" alt="Logo ElooooIT" style="width:120px;height:120px;"></h1>
+    <h1><img src="./Logo_v3_squared_500px.png" alt="Logo ElooooIT" style="width:240px;height:240px;"></h1>
     <h2>Dear visitor,</br>
 the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
@@ -16,10 +16,15 @@ Thank you and have a nice day!</br>
 Yours, Eloi and the ElooooIT team</h2>
 </br>
 </br>
-    <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira                                       Steuernr.   215/5013/5477</br>
-        Schwalbengasse 46, Innenstadt Köln, 50667                                           USt.ID Nr.    DE451906671</br>
+    <span>
+    <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira</br>
+        Schwalbengasse 46, Innenstadt Köln, 50667</br>
         Tel. +49 221 70214655  Fax. +49 221 70241341
+    </h3>    
+    <h3>Steuernr.   215/5013/5477</br>
+        USt.ID Nr.    DE451906671</br>
     </h3>
+    </span>
 </br>
 </br>
 </br>
