--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-    <h1><img src="./Logo_v3_squared_500px.png" alt="Logo ElooooIT" style="width:240px;height:240px;"></h1>
+    <h1><img src="./Logo_v3.png" alt="Logo ElooooIT" style="width:240px;height:240px;"></h1>
     <h2>Dear visitor,</br>
 the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
