--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 
 <html>
-<head></head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ElooooIT, SAP Development</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  </head>
 
 <body>
     <h1><img src="./Logo_v3.png" alt="Logo ElooooIT" style="width:240px;height:240px;"></h1>
@@ -16,17 +21,21 @@ Thank you and have a nice day!</br>
 Yours, Eloi and the ElooooIT team</h2>
 </br>
 </br>
-    <span>
-    <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira</br>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+        <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira</br>
         Schwalbengasse 46, Innenstadt Köln, 50667</br>
         Tel. +49 221 70214655  Fax. +49 221 70241341
-    </h3>    
-    <h3>Steuernr.   215/5013/5477</br>
+        </h3>  
+    </div>
+    <div class="col">
+        <h3>Steuernr.   215/5013/5477</br>
         USt.ID Nr.    DE451906671</br>
-    </h3>
-    </span>
-</br>
-</br>
+        </h3>
+    </div>
+  </div>
+</div>
 </br>
     <h3>Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
 </body>
