--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Yours, Eloi and the ElooooIT team</h2>
   </div>
 </div>
 </br>
-    <h3>Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+    <h3 class="bs-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
 </body>
     <script type="text/javascript">
     
