--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
   </head>
 
 <body>
-    <h1><img src="./Logo_v3.png" alt="Logo ElooooIT" style="width:240px;height:240px;"></h1>
+  <div class="container">
+    <nav class="navbar bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./Logo_v3.png" alt="Logo ElooooIT" style="width:240px;">
+        </a>
+      </div>
+    </nav>
+    <h1></h1>
     <h2>Dear visitor,</br>
 the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
     </br>
-At this moment you can find more information about ElooooIT, as well contact us</br>
-via our LinkedIn profile on:</br>
+At this moment you can find more information about ElooooIT,</br>
+      as well contact us via our LinkedIn profile on:</br>
         <a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
     </br>
 Thank you and have a nice day!</br>
@@ -38,6 +46,7 @@ Yours, Eloi and the ElooooIT team</h2>
 </div>
 </br>
     <h3 class="bs-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+  </div>
 </body>
     <script type="text/javascript">
     
