--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@ Yours, Eloi and the ElooooIT team</h2>
   </div>
 <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary"> 
   <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
-          <div class="col-lg-3 mb-3"> 
+
     <div class="row"> 
             <div class="col-6 col-lg-2 offset-lg-1 mb-3"> 
               <h5>ElooooIT, Inh. Eloi R. Bermejo de Oliveira</br>
                   Schwalbengasse 46, D-50667 Köln</br>
                   Tel. +49 221 70214655  Fax. +49 221 70241341</h5> 
-    </div> </div>
-          <div class="col-lg-3 mb-3"> <div class="row"> 
+    </div>
+           <div class="row"> 
             <div class="col-6 col-lg-2 offset-lg-1 mb-3"> 
               <h5>Steuernr. 215/5013/5477</br>
                   USt.ID-Nr.  DE451906671</br>
                   </h5> 
-    </div> </div>
+    </div> 
       <div class="col-lg-3 mb-3"> 
         <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap"> 
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="32" width="40"> 
