--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@ Yours, Eloi and the ElooooIT team</h2>
 </br>
     <h3 class="bs-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
   </div>
-<footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary"> 
-  <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
-      <div class="col-6 col-lg-2 mb-3"> 
+
+  
+  
+  <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary"> 
+    <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
+      <div class="row">
+        <div class="col-6 col-lg-2 mb-3"> 
         <h5>ElooooIT, Inh. Eloi R. Bermejo de Oliveira</h5> 
         <ul class="list-unstyled"> 
           <li class="mb-2">Schwalbengasse 46, D-50667 Köln</li> 
@@ -76,7 +80,7 @@ Yours, Eloi and the ElooooIT team</h2>
         <ul class="list-unstyled small"> 
           <li class="mb-2">(c) ElooooIT 2025</li> 
         </ul> 
-      </div> 
+      </div> </div>
             
 </footer>
 
