--- a/index.html
+++ b/index.html
@@ -52,26 +52,22 @@ Yours, Eloi and the ElooooIT team</h2>
   
   <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary"> 
     <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
-      <h5>ElooooIT, Inh. Eloi R. Bermejo de Oliveira</h5> 
+      <h5></h5> 
       <div class="row">
-        <div class="col-6 col-lg-2 mb-3"> 
+        <div class="col-4 col-lg-2 mb-3"> 
           <ul class="list-unstyled"> 
+            <li class="mb-2">ElooooIT, Inh. Eloi R. Bermejo de Oliveira</li> 
             <li class="mb-2">Schwalbengasse 46, D-50667 Köln</li> 
             <li class="mb-2">Tel. +49 221 70214655  Fax. +49 221 70241341</li> 
           </ul> 
         </div>
-        <div class="col-6 col-lg-2 offset-lg-1 mb-3"> 
+        <div class="col-8 col-lg-2 offset-lg-1 mb-3"> 
           <ul class="list-unstyled"> 
             <li class="mb-2">Steuernr. 215/5013/5477</li> 
             <li class="mb-2">USt.ID-Nr.  DE451906671</li> 
           </ul> 
-        </div>
-        <div class="col-6 col-lg-2  mb-3"> <h5>Links</h5> <ul class="list-unstyled"> <li class="mb-2"><a href="/">Home</a></li> <li class="mb-2"><a href="/docs/5.3/">Docs</a></li> <li class="mb-2"><a href="/docs/5.3/examples">Examples</a></li> <li class="mb-2"><a href="https://icons.getbootstrap.com/">Icons</a></li> <li class="mb-2"><a href="https://themes.getbootstrap.com/">Themes</a></li> <li class="mb-2"><a href="https://blog.getbootstrap.com/">Blog</a></li> <li class="mb-2"><a href="https://cottonbureau.com/people/bootstrap" target="_blank" rel="noopener">Swag Store</a></li> </ul> </div>
-             
+        </div>            
         <div class="col-lg-3 mb-3"> 
-          <ul class="list-unstyled small"> 
-            <li class="mb-2">Copyright ElooooIT 2025</li> 
-          </ul>
           <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap"> 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="32" width="40"> 
               <title>Bootstrap</title> 
@@ -79,6 +75,10 @@ Yours, Eloi and the ElooooIT team</h2>
             </svg> 
             <span class="fs-5">Built with Bootstrap</span> 
           </a>  
+          <ul class="list-unstyled small"> 
+            <li class="mb-2">Copyright ElooooIT 2025</li> 
+            <li class="mb-2"><a href="/">Home</a></li> <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
+          </ul>
         </div> 
       </div>  
     </div>
