--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@ Yours, Eloi and the ElooooIT team</h2>
     <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
       <h5></h5> 
       <div class="row">
-        <div class="col-4 col-lg-2 mb-3"> 
+        <div class="col-8 col-lg-2 mb-3"> 
           <ul class="list-unstyled"> 
             <li class="mb-2">ElooooIT, Inh. Eloi R. Bermejo de Oliveira</li> 
             <li class="mb-2">Schwalbengasse 46, D-50667 Köln</li> 
             <li class="mb-2">Tel. +49 221 70214655  Fax. +49 221 70241341</li> 
           </ul> 
         </div>
-        <div class="col-8 col-lg-2 offset-lg-1 mb-3"> 
+        <div class="col-4 col-lg-2 offset-lg-1 mb-3"> 
           <ul class="list-unstyled"> 
             <li class="mb-2">Steuernr. 215/5013/5477</li> 
             <li class="mb-2">USt.ID-Nr.  DE451906671</li> 
           </ul> 
         </div>            
-        <div class="col-lg-3 mb-3"> 
+        <div class="col-lg-3 offset-lg-1 mb-3"> 
           <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap"> 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="32" width="40"> 
               <title>Bootstrap</title> 
@@ -77,7 +77,7 @@ Yours, Eloi and the ElooooIT team</h2>
           </a>  
           <ul class="list-unstyled small"> 
             <li class="mb-2">Copyright ElooooIT 2025</li> 
-            <li class="mb-2"><a href="/">Home</a></li> <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
+            <li class="mb-2"><a href="/impressum">Impressum</a></li> 
           </ul>
         </div> 
       </div>  
