--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Yours, Eloi and the ElooooIT team</h2>
           </a>  
           <ul class="list-unstyled small"> 
             <li class="mb-2">Copyright ElooooIT 2025</li> 
-            <li class="mb-2"><a href="/impressum">Impressum</a></li> 
+            <li class="mb-2">SAP PartnerEdge Open Ecosystem: Build</li> 
           </ul>
         </div> 
       </div>  
