--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ Yours, Eloi and the ElooooIT team</h2>
             <li class="mb-2">Tel. +49 221 70214655  Fax. +49 221 70241341</li> 
           </ul> 
         </div>
-        <div class="col-lg-4 offset-lg-2 mb-3"> 
+        <div class="col-lg-3 offset-lg-1 mb-3"> 
           <ul class="list-unstyled"> 
-            <li class="mb-2">nbsp;</li> 
+            <li class="mb-2"></li> 
             <li class="mb-2">Steuernr. 215/5013/5477</li> 
             <li class="mb-2">USt.ID-Nr.  DE451906671</li> 
           </ul> 
         </div>            
-        <div class="col-lg-4 offset-lg-2 mb-3"> 
+        <div class="col-lg-3 offset-lg-1 mb-3"> 
           <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap"> 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="32" width="40"> 
               <title>Bootstrap</title> 
