--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Yours, Eloi and the ElooooIT team</h2>
     <div class="col">
         <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira</br>
         Schwalbengasse 46, Innenstadt Köln, 50667</br>
-        Tel. +49 221 70214655  Fax. +49 221 70241341
+        <i class="bi bi-phone-vibrate-fill"></i>+49 221 70214655  <i class="bi bi-printer-fill" style="font-size: 2rem;"></i>Fax. +49 221 70241341
         </h3>  
     </div>
     <div class="col">
