--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@ Yours, Eloi and the ElooooIT team</h2>
           <ul class="list-unstyled"> 
             <li class="mb-2">ElooooIT, Inh. Eloi R. Bermejo de Oliveira</li> 
             <li class="mb-2">Schwalbengasse 46, D-50667 Köln</li> 
-            <li class="mb-2">Tel. +49 221 70214655  Fax. +49 221 70241341</li> 
+            <li class="mb-2">
+              <i class="bi bi-phone-vibrate-fill"></i>+49 221 70214655  <i class="bi bi-printer-fill" style="font-size: 2rem;">
+              </i>Fax. +49 221 70241341
+            </li> 
           </ul> 
         </div>
         <div class="col-lg-3 offset-lg-1 mb-3"> 
