--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Yours, Eloi and the ElooooIT team</h2>
 
   
   
-  <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary"> 
-    <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary"> 
+  <footer class="bd-footer mt-3 bg-body-tertiary"> 
+    <div class="container py-md-2 px-4 px-md-3 text-body-secondary"> 
       <h5></h5> 
       <div class="row">
         <div class="col-lg-4 mb-3"> 
