--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Yours, Eloi and the ElooooIT team</h2>
           <ul class="list-unstyled small"> 
             <li class="mb-2">Copyright ElooooIT 2025</li> 
             <li class="mb-2">SAP PartnerEdge Open Ecosystem: Build</li> 
-            <li class="mb-2" style="color: #4c0bce;">
+            <li class="mb-2" style="color: #4c0bce !important;">
           <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap"> 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="16" width="20"> 
               <title>Bootstrap</title> 
