--- a/index.html
+++ b/index.html
@@ -29,23 +29,9 @@ Thank you and have a nice day!</br>
 Yours, Eloi and the ElooooIT team</h2>
 </br>
 </br>
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-        <h3>ElooooIT, Inhaber Eloi R. Bermejo de Oliveira</br>
-        Schwalbengasse 46, Innenstadt Köln, 50667</br>
-        <i class="bi bi-phone-vibrate-fill"></i>+49 221 70214655  <i class="bi bi-printer-fill" style="font-size: 2rem;"></i>Fax. +49 221 70241341
-        </h3>  
-    </div>
-    <div class="col">
-        <h3>Steuernr.   215/5013/5477</br>
-        USt.ID Nr.    DE451906671</br>
-        </h3>
-    </div>
-  </div>
-</div>
 </br>
-    <h3 class="bs-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+    <h3 class="bg-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+  </br>
   </div>
 
   
