--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Yours, Eloi and the ElooooIT team</h2>
 </br>
 </br>
 </br>
-    <h3 class="bg-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+    <h3 class="text-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
   </br>
   </div>
 
