--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar bg-body-tertiary">
+    <header class="navbar bg-body-tertiary">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./Logo_v3.png" alt="Logo ElooooIT" style="width:240px;">
         </a>
       </div>
-    </nav>
+    </header>
+  <div class="container">
+
     <h1></h1>
     <h2>Dear visitor,</br>
 the ElooooIT team is currently working on a new Webpage.</br>
