--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
 
-<body>
-    <div class="container">
+  <body>
+
     <header class="navbar bg-body-tertiary">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -17,10 +17,9 @@
       </div>
     </header>
 
-
-    <h1></h1>
-    <h2>Dear visitor,</br>
-the ElooooIT team is currently working on a new Webpage.</br>
+    <div class="container mt-5">
+    <h2>Dear visitor,</h2>
+<h3>the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
     </br>
 At this moment you can find more information about ElooooIT,</br>
@@ -28,15 +27,15 @@ At this moment you can find more information about ElooooIT,</br>
         <a href="https://www.linkedin.com/company/eloooo-it">https://www.linkedin.com/company/eloooo-it</a></br>
     </br>
 Thank you and have a nice day!</br>
-Yours, Eloi and the ElooooIT team</h2>
+Yours, Eloi and the ElooooIT team</h3>
 </br>
 </br>
 </br>
-    <h3 class="text-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h3>
+    <h4 class="text-warning">Automatically redirecting to LinkedIn in... <span id="countdown">20</span> seconds</h4>
   </br>
 
   
-  
+  </div>
   <footer class="bd-footer mt-3 bg-body-tertiary"> 
     <div class="container py-md-2 px-4 px-md-3 text-body-secondary"> 
       <h5></h5> 
@@ -87,8 +86,6 @@ Yours, Eloi and the ElooooIT team</h2>
       </div>  
     </div>
   </footer> 
-    </div>
-
 </body>
     <script type="text/javascript">
     
