--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Yours, Eloi and the ElooooIT team</h3>
 
   
   </div>
-  <footer class="bd-footer mt-3 bg-body-tertiary"> 
+  <footer class="bd-footer mt-3 bg-body-tertiary fixed-bottom"> 
     <div class="container py-md-2 px-4 px-md-3 text-body-secondary"> 
       <h5></h5> 
       <div class="row">
@@ -74,7 +74,7 @@ Yours, Eloi and the ElooooIT team</h3>
         </div>            
         <div class="col-lg-3 offset-lg-1 mb-3"> 
           <ul class="list-unstyled small"> 
-            <li class="mb-2">Copyright ElooooIT 2025</li> 
+            <li class="mb-2">&Copy;ElooooIT 2025</li> 
             <li class="mb-2">Proud member of the Apple Developer Program and the SAP PartnerEdge Open Ecosystem (Build)</li> 
             <li class="mb-2">
           <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap" style="color: #4c0bce !important;"> 
