--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Yours, Eloi and the ElooooIT team</h3>
             </li> 
           </ul> 
         </div>
-        <div class="col-lg-3 offset-lg-1 mb-3"> 
+        <div class="col-lg-3 offset-lg-1 mb-3 text-end"> 
           <ul class="list-unstyled small"> 
             <li class="mb-2">Steuernr. 215/5013/5477</li> 
             <li class="mb-2">USt.ID-Nr.  DE451906671</li> 
