--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Yours, Eloi and the ElooooIT team</h3>
             </li> 
           </ul> 
         </div>
-        <div class="col-lg-3 mb-3"> 
+        <div class="col-lg-4 mb-3 text-center"> 
           <ul class="list-unstyled small"> 
             <li class="mb-2">Steuernr. 215/5013/5477</li> 
             <li class="mb-2">USt.ID-Nr.  DE451906671</li> 
@@ -72,7 +72,7 @@ Yours, Eloi and the ElooooIT team</h3>
             </li>
           </ul> 
         </div>            
-        <div class="col-lg-3 offset-lg-1 mb-3 text-end"> 
+        <div class="col-lg-4 mb-3 text-end"> 
           <ul class="list-unstyled small"> 
             <li class="mb-2">©ElooooIT 2025</li> 
             <li class="mb-2">Proud member of the Apple Developer Program and the SAP PartnerEdge Open Ecosystem (Build)</li> 
