--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </header>
 
-    <div class="container mt-5">
+    <div class="container-xl mt-5">
     <h2>Dear visitor,</h2>
 <h3>the ElooooIT team is currently working on a new Webpage.</br>
 We thank you for your patience and understanding.</br>
@@ -111,5 +111,6 @@ Yours, Eloi and the ElooooIT team</h3>
     countdown();
   
   </script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>   
 </html>
