--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </br> 
       </div>
     </main>
-    <footer class="bd-footer mt-3 bg-body-tertiary fixed-bottom"> 
+    <footer class="bd-footer mt-3 bg-body-tertiary" style="height:500px;"> 
       <div class="container py-md-2 px-4 px-md-3 text-body-secondary"> 
         <h5></h5> 
         <div class="row">
