--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="col-lg-4 mb-3 text-end"> 
             <ul class="list-unstyled small"> 
               <li class="mb-2">©ElooooIT 2025</li> 
-              <li class="mb-2">Proud member of the Apple Developer Program and the SAP PartnerEdge Open Ecosystem (Build)</li> 
+              <li class="mb-2">Member of SAP Open Ecosystem (Build)</li> 
               <li class="mb-2">
             <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="https://getbootstrap.com" aria-label="Bootstrap" style="color: #4c0bce !important;"> 
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img" class="d-block me-2" height="16" width="20"> 
